--- a/app/views/store_details/index.html.erb
+++ b/app/views/store_details/index.html.erb
@@ -16,6 +16,7 @@
 
     <div class="store-details-second-section">
       <h3>レビュー</h3>
+      <hr class="underline">
       <div id="reviews" data-review-form-target="reviews">
         <%= render partial: "store_details/review", collection: @reviews %>
       </div>
