--- a/app/views/mypage/index.html.erb
+++ b/app/views/mypage/index.html.erb
@@ -10,25 +10,8 @@
     <hr class="underline">
     
     <% @reviews.each do |review| %>
-      <div class="review-item">
-        <img src="<%= image_path('kkrn_icon_user_5.png') %>" alt="Review Image" class="review-image">
-        <div class="review-content">
-          <p><%= review.store_name %></p>
-          <p>★★★★★</p>
-          <p class="review-text"><%= review.review %></p>
-        </div>
-        <div class="review-summary">
-          <p>サービス : <%= review.service %></p>
-          <p>価格 : <%= review.price %></p>
-          <p>雰囲気 : <%= review.atmosphere %></p>
-        </div>
-      </div>
+      <%= render partial: "mypage/review", locals: { review: review } %>
     <% end %>
-
-    <div class="review-actions">
-      <button data-action="click->review-change#open">編集</button>
-      <button class="delete-button" data-action="click->review-change#confirmDelete">削除</button>
-    </div>
   </div>
 
   <div class="overlay" data-review-change-target="overlay" data-action="click->review-change#close"></div>
